# fibeRIS

./: .gitignore  LICENSE  README.md  environment.yml  github.token  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: analyzer_philosophy.md  modernization_notes.md  packing_starndard.md
examples/: 101r_real_DASdata_viz_hwell.py  102_multi_fracture_template.py  102r_IOstandard_example.ipynb  102rp_IOstandard_example.py
examples/data/1d/: 001_pressure_data_sample.npz  002_savez_data_sample.npz
examples/data/2d/original_data/: All_DAS_fibre_depth_table.csvh  sensor_2019-03-28T160419Z.h5  sensor_2019-03-28T160919Z.h5  sensor_2019-03-28T161419Z.h5  sensor_2019-03-28T161919Z.h5  sensor_2019-03-28T162419Z.h5  sensor_2019-03-28T162919Z.h5  sensor_2019-03-28T163436Z.h5  sensor_2019-03-28T163936Z.h5  sensor_2019-03-28T164436Z.h5
examples/scripts/: cameron_addition.ipynb
examples/scripts/dataio/: 1d_data.ipynb  2d_data.ipynb
examples/scripts/simulator/: moose_optimizer.ipynb  moose_perm_imaging.ipynb  moose_simulator.ipynb
src/fiberis/analyzer/: README.md
src/fiberis/analyzer/Data1D/: Data1D_GAUGE.py  Data1D_Gauge.py  Data1D_MOOSEps.py  Data1D_PumpingCurve.py  README.md  core1D.py
src/fiberis/analyzer/Data1DG/: core1DG.py
src/fiberis/analyzer/Data2D/: Data2D_XT_DSS.py  Data2D_moose.py  README.md  core2D.py
src/fiberis/analyzer/Data3D/: Data3D_microseismic.py  README.md  core3D.py
src/fiberis/analyzer/Geometry3D/: DataG3D_md.py  README.md  coreG3D.py
src/fiberis/analyzer/TensorProcessor/: README.md  coreT.py  coreT1D.py  coreT2D.py
src/fiberis/analyzer/VectorProcessor/: README.md  coreV.py
src/fiberis/analyzer/io/: core.py  reader_hfts2_h5.py  reader_mariner_3d.py  reader_mariner_das2d.py  reader_mariner_gauge1d.py  reader_mariner_pp1d.py  reader_mariner_rfs.py  reader_moose_ifile.py
src/fiberis/analyzer/utils/: history_utils.py  io_utils.py  signal_utils.py  syn_utils.py  viz_utils.py
src/fiberis/io/: README.md  __init__.py  core.py  reader_MOOSEcsv_pp1d.py  reader_bearskin_injection.py  reader_bearskin_pp1d.py  reader_gold4pb_3d.py  reader_gold4pb_projection.py  reader_hfts2_h5.py  reader_mariner_3d.py  reader_mariner_das2d.py  reader_mariner_dssh5.py  reader_mariner_fiberdata_production_dat2d.py  reader_mariner_gauge1d.py  reader_mariner_pp1d.py  reader_mariner_pressureg1.py  reader_mariner_rfs.py  reader_moose_ifile.py  reader_moose_ps.py  reader_moose_tensor_from_data2d.py  reader_moose_tensor_vpp.py  reader_moose_vpp.py
src/fiberis/moose/: README.md  __init__.py  config.py  editor.py  input_editor.py  input_generator.py  model_builder.py  model_builder_bkp.py  optimizer.py  postprocessor.py  runner.py  study.py
src/fiberis/moose/templates/: baseline_model_generator.py  baseline_model_generator_fervo.py  baseline_model_generator_v2.py  example_01.i  example_VF.i  example_fiberis.i
src/fiberis/simulator/: README.md
src/fiberis/simulator/core/: bcs.py  pds.py
src/fiberis/simulator/optimizer/: tso.py
src/fiberis/simulator/solver/: PDESolver_EXP.py  matbuilder.py
src/fiberis/utils/: README.md  history_utils.py  io_utils.py  opt_utils.py  signal_utils.py  viz_utils.py
tests/: conftest.py  test_core1D.py  test_core1D_extended.py  test_core1dg.py  test_core2D.py  test_core2D_extended.py  test_core3D.py  test_core3D_extended.py  test_data1d_specialized.py  test_data2d_dss.py  test_geometry.py  test_geometry_extended.py  test_history_utils.py  test_io_core.py  test_io_readers.py  test_io_utils.py  test_mesh_utils.py  test_moose_config.py  test_moose_editor.py  test_moose_input_generator.py  test_moose_model_builder.py  test_moose_postprocessor.py  test_performance.py  test_signal_utils.py  test_signal_utils_extended.py  test_simulator_core.py  test_simulator_optimizer.py  test_simulator_solver.py  test_syn_utils.py  test_tensor.py  test_tensor1d.py  test_tensor2d.py  test_tensor_core_extended.py
