[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiberis"
version = "0.1.20"
description = "Fiber Reservoir Integrated Simulator"
readme = "README.md"
authors = [{ name = "Shenyao Jin", email = "shenyaojin@mines.edu" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.5",
    "scipy>=1.8",
    "pandas>=1.5",
    "h5py>=3.7",
    "plotly>=5.10",
    "python-dateutil>=2.8",
    "importlib>=1.0.4,<2.0.0"
]

[optional-dependencies]
dev = ["pytest", "sphinx", "black", "flake8", "mypy"]
docs = ["mkdocs", "mkdocs-material"]

[tool.setuptools.packages]
find = { where = ["src"] }

[project.urls]
Homepage = "https://github.com/shenyaojin/fibeRIS"